--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.10.2",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
